[package]
name = "hyper-wrapper"
version = "0.1.3"
edition = "2021"
description = "A JSON configuration wrapper for hyperfine benchmarking tool"
authors = ["Will Clark <will@256k1.dev>"]
license = "MIT"
repository = "https://github.com/bitcoin-dev-tools/hyper-wrapper"

[dependencies]
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
